force-app/main/default/objects/EBS_Order__c/EBS_Order__c.object-meta.xml
<CustomObject>
    <label>EBS Order</label>
    <nameField>
        <displayFormat>EBSO{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EBS Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>