force-app/main/default/objects/EBS_Order__c/fields/Acc_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Acc_Customer_Category__c</fullName>
    <description
  >Temp field to bring customer category to order level</description>
    <formula>Account_Name__r.Customer_Category__c</formula>
    <label>Acc Customer Category</label>
    <type>Text</type>
</CustomField>