force-app/main/default/objects/EBS_Order__c/fields/Acc_Order_Confirm_Contact_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Acc_Order_Confirm_Contact_To_Email__c</fullName>
    <label>Acc Order Confirm Contact To Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>