force-app/main/default/objects/EBS_Order__c/fields/Acc_PO_Contact__c.field-meta.xml
<CustomField>
    <fullName>Acc_PO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acc PO Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBS Orders (Acc PO Contact)</relationshipLabel>
    <relationshipName>EBS_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>