force-app/main/default/objects/EBS_Order__c/fields/Acc_PO_Contact_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>Acc_PO_Contact_CC_Email__c</fullName>
    <label>Acc PO Contact CC Email</label>
    <type>TextArea</type>
</CustomField>