force-app/main/default/objects/EBS_Order__c/fields/Acc_Shipping_Notif_Contact_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Acc_Shipping_Notif_Contact_To_Email__c</fullName>
    <label>Acc Shipping Notif Contact To Email</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>