force-app/main/default/objects/EBS_Order__c/fields/Account_Acc_PO_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Acc_PO_Contact_Email__c</fullName>
    <formula>Account_Name__r.Acc_PO_Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Acc PO Contact Email</label>
    <type>Text</type>
</CustomField>