force-app/main/default/objects/EBS_Order__c/fields/Account_Comm_Preference__c.field-meta.xml
<CustomField>
    <fullName>Account_Comm_Preference__c</fullName>
    <description>Temp field to see data in list view</description>
    <formula>Text(Account_Name__r.Account_Comm_Preference__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Comm Preference</label>
    <type>Text</type>
</CustomField>