force-app/main/default/objects/EBS_Order__c/fields/Account_Queue__c.field-meta.xml
<CustomField>
    <fullName>Account_Queue__c</fullName>
    <formula>Account_Name__r.Corporate_Route__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Queue</label>
    <type>Text</type>
</CustomField>