force-app/main/default/objects/EBS_Order__c/fields/Account_SIC__c.field-meta.xml
<CustomField>
    <fullName>Account_SIC__c</fullName>
    <formula>Account_Name__r.Sic</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SIC</label>
    <type>Text</type>
</CustomField>