force-app/main/default/objects/EBS_Order__c/fields/Additional_EBS_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_EBS_Notes__c</fullName>
    <inlineHelpText>Additional notes on this order.</inlineHelpText>
    <label>Additional EBS Notes</label>
    <length>2500</length>
    <type>Html</type>
</CustomField>