force-app/main/default/objects/EBS_Order__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <label>Additional Emails</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>