force-app/main/default/objects/EBS_Order__c/fields/Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_4__c</fullName>
    <label>Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>