force-app/main/default/objects/EBS_Order__c/fields/Address_Site__c.field-meta.xml
<CustomField>
    <fullName>Address_Site__c</fullName>
    <label>Address Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>