force-app/main/default/objects/EBS_Order__c/fields/Applied_By__c.field-meta.xml
<CustomField>
    <fullName>Applied_By__c</fullName>
    <label>Applied By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>