force-app/main/default/objects/EBS_Order__c/fields/AT__c.field-meta.xml
<CustomField>
    <fullName>AT__c</fullName>
    <label>AT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>