force-app/main/default/objects/EBS_Order__c/fields/BDF_Account__c.field-meta.xml
<CustomField>
    <fullName>BDF_Account__c</fullName>
    <formula>Account_Name__r.BDF_Flag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDF Account</label>
    <type>Checkbox</type>
</CustomField>