force-app/main/default/objects/EBS_Order__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <externalId>true</externalId>
    <label>Bill To</label>
    <length>20</length>
    <type>Text</type>
</CustomField>