force-app/main/default/objects/EBS_Order__c/fields/Cadence_Shipping_Priority__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Shipping_Priority__c</fullName>
    <formula>IF
(
	Line_Shipping_Priority__c  &gt; 0,
	&apos;24 Hour Cadence&apos;, 
	&apos;Standard Cadence&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cadence Shipping Priority</label>
    <type>Text</type>
</CustomField>