force-app/main/default/objects/EBS_Order__c/fields/Call_it_Shipping_Notif_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Call_it_Shipping_Notif_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call it Shipping Notif Opt In</label>
    <type>Checkbox</type>
</CustomField>