force-app/main/default/objects/EBS_Order__c/fields/Clarification_Hold__c.field-meta.xml
<CustomField>
    <fullName>Clarification_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clarification Hold</label>
    <type>Checkbox</type>
</CustomField>