force-app/main/default/objects/EBS_Order__c/fields/Company_identifier__c.field-meta.xml
<CustomField>
    <fullName>Company_identifier__c</fullName>
    <description
  >Field used in the order detail link to automatically insert the acquired company name. Data sent from ODS</description>
    <inlineHelpText
  >Field used in the order detail link to automatically insert the acquired company name</inlineHelpText>
    <label>Company identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>