force-app/main/default/objects/EBS_Order__c/fields/Contact_Order_URL__c.field-meta.xml
<CustomField>
    <fullName>Contact_Order_URL__c</fullName>
    <label>Contact Order URL</label>
    <type>Url</type>
</CustomField>