force-app/main/default/objects/EBS_Order__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>