force-app/main/default/objects/EBS_Order__c/fields/Cust_PO_Total__c.field-meta.xml
<CustomField>
    <fullName>Cust_PO_Total__c</fullName>
    <label>Cust PO Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>