force-app/main/default/objects/EBS_Order__c/fields/Customer_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Number__c</fullName>
    <label>Customer Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>