force-app/main/default/objects/EBS_Order__c/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description
  >Overall order status populated by integration aka Website status</description>
    <label>Customer Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>