force-app/main/default/objects/EBS_Order__c/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EBS Orders (Distributor Account)</relationshipLabel>
    <relationshipName>EBS_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>