force-app/main/default/objects/EBS_Order__c/fields/EBS_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>EBS_Invoice_Date__c</fullName>
    <description
  >Date of the invoice. Manually filled in to do a data comparison</description>
    <label>EBS Invoice Date</label>
    <type>Date</type>
</CustomField>