force-app/main/default/objects/EBS_Order__c/fields/EBS_ORDER_Id_18__c.field-meta.xml
<CustomField>
    <fullName>EBS_ORDER_Id_18__c</fullName>
    <description>EBS ORDER Id (18)</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EBS ORDER Id (18)</inlineHelpText>
    <label>EBS ORDER Id (18)</label>
    <type>Text</type>
</CustomField>