force-app/main/default/objects/EBS_Order__c/fields/EBS_Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_Notes__c</fullName>
    <label>EBS Order Notes</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>