force-app/main/default/objects/EBS_Order__c/fields/EBS_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_Number__c</fullName>
    <externalId>true</externalId>
    <label>EBS Order Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>