force-app/main/default/objects/EBS_Order__c/fields/EBS_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_Status__c</fullName>
    <label>EBS Order Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>