force-app/main/default/objects/EBS_Order__c/fields/EBS_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_Total__c</fullName>
    <label>EBS Order Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>