force-app/main/default/objects/EBS_Order__c/fields/EBS_Order_URL__c.field-meta.xml
<CustomField>
    <fullName>EBS_Order_URL__c</fullName>
    <label>EBS Order URL</label>
    <type>Url</type>
</CustomField>