force-app/main/default/objects/EBS_Order__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>The EBS order creation date</inlineHelpText>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>