force-app/main/default/objects/EBS_Order__c/fields/Exclude_From_30_Days_Spec_Sample__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_30_Days_Spec_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Exclude the record from the Spec Sample journey if the checkbox is selected (true). If checked, the record will be ignored for 30 days and not enter the Spec Sample journey.</description>
    <label>Exclude From 30 Days Spec Sample</label>
    <type>Checkbox</type>
</CustomField>