force-app/main/default/objects/EBS_Order__c/fields/Exclude_From_60_Days_Spec_Sample__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_60_Days_Spec_Sample__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Exclude the record from the Spec Sample journey if the checkbox is selected (true). If checked, the record will be ignored for 90 days and not enter the Spec Sample journey.</description>
    <label>Exclude From 60 Days Spec Sample</label>
    <type>Checkbox</type>
</CustomField>