force-app/main/default/objects/EBS_Order__c/fields/FOB__c.field-meta.xml
<CustomField>
    <fullName>FOB__c</fullName>
    <label>FOB</label>
    <length>200</length>
    <type>Text</type>
</CustomField>