force-app/main/default/objects/EBS_Order__c/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <label>Freight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>