force-app/main/default/objects/EBS_Order__c/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>