force-app/main/default/objects/EBS_Order__c/fields/Frieght__c.field-meta.xml
<CustomField>
    <fullName>Frieght__c</fullName>
    <label>Frieght</label>
    <length>255</length>
    <type>Text</type>
</CustomField>