force-app/main/default/objects/EBS_Order__c/fields/Header_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Header_Creation_Date__c</fullName>
    <label>Header Creation Date</label>
    <type>Date</type>
</CustomField>