force-app/main/default/objects/EBS_Order__c/fields/Hold_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Type__c</fullName>
    <label>Hold Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>