force-app/main/default/objects/EBS_Order__c/fields/Hold_Unitil__c.field-meta.xml
<CustomField>
    <fullName>Hold_Unitil__c</fullName>
    <label>Hold Until</label>
    <length>255</length>
    <type>Text</type>
</CustomField>