force-app/main/default/objects/EBS_Order__c/fields/IBInvoiceDollars__c.field-meta.xml
<CustomField>
    <fullName>IBInvoiceDollars__c</fullName>
    <label>Invoice Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>