force-app/main/default/objects/EBS_Order__c/fields/IBPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>IBPurchaseOrder__c</fullName>
    <label>Purchase Order</label>
    <length>21</length>
    <type>Text</type>
</CustomField>