force-app/main/default/objects/EBS_Order__c/fields/IBSalesOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>IBSalesOrderNumber__c</fullName>
    <externalId>true</externalId>
    <label>Sales Order Number</label>
    <length>21</length>
    <type>Text</type>
</CustomField>