force-app/main/default/objects/EBS_Order__c/fields/IBSytelineID__c.field-meta.xml
<CustomField>
    <fullName>IBSytelineID__c</fullName>
    <externalId>true</externalId>
    <label>Syteline ID</label>
    <length>21</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>