force-app/main/default/objects/EBS_Order__c/fields/In_Hand_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Hand_Date__c</fullName>
    <label>In Hand Date</label>
    <type>Date</type>
</CustomField>