force-app/main/default/objects/EBS_Order__c/fields/Incl_in_Samples_Journey__c.field-meta.xml
<CustomField>
    <fullName>Incl_in_Samples_Journey__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Included in Samples Journey, coming from SFMC Samples Journey</description>
    <inlineHelpText
  >Included in Samples Journey, coming from SFMC Samples Journey</inlineHelpText>
    <label>Incl in Samples Journey?</label>
    <type>Checkbox</type>
</CustomField>