force-app/main/default/objects/EBS_Order__c/fields/Is_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Sent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Sent?</label>
    <type>Checkbox</type>
</CustomField>