force-app/main/default/objects/EBS_Order__c/fields/Is_Web_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_Web_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Web Order</label>
    <type>Checkbox</type>
</CustomField>