force-app/main/default/objects/EBS_Order__c/fields/Large_Order_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Large_Order_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Check when first Large Order CASE is created, additional EBS Order Lines on the same EBS Order are prevented from creating new CASEs when checked.</description>
    <label>Large Order Indicator</label>
    <type>Checkbox</type>
</CustomField>