force-app/main/default/objects/EBS_Order__c/fields/Latest_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Complete_Date_Time__c</fullName>
    <label>Latest Complete Date/Time</label>
    <type>DateTime</type>
</CustomField>