force-app/main/default/objects/EBS_Order__c/fields/Latest_in_Production_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_in_Production_Date_Time__c</fullName>
    <description
  >This will hold the latest timestamp at which an Order Line went to In Production to send the email after 1 hours.</description>
    <label>Latest in Production Date/Time</label>
    <type>DateTime</type>
</CustomField>