force-app/main/default/objects/EBS_Order__c/fields/Lead_Time_Template__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Template__c</fullName>
    <label>Lead Time Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>