force-app/main/default/objects/EBS_Order__c/fields/Line_Shipping_Priority__c.field-meta.xml
<CustomField>
    <fullName>Line_Shipping_Priority__c</fullName>
    <label>Line Shipping Priority</label>
    <summaryFilterItems>
        <field>EBS_Order_Line__c.Line_Type__c</field>
        <operation>contains</operation>
        <value>24</value>
    </summaryFilterItems>
    <summaryForeignKey>EBS_Order_Line__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>