force-app/main/default/objects/EBS_Order__c/fields/Notification_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Notification_Created_Date__c</fullName>
    <label>Notification Created Date</label>
    <type>DateTime</type>
</CustomField>