force-app/main/default/objects/EBS_Order__c/fields/Notification_Description__c.field-meta.xml
<CustomField>
    <fullName>Notification_Description__c</fullName>
    <label>Notification Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>