force-app/main/default/objects/EBS_Order__c/fields/On_Hold__c.field-meta.xml
<CustomField>
    <fullName>On_Hold__c</fullName>
    <label>On Hold</label>
    <length>20</length>
    <type>Text</type>
</CustomField>