force-app/main/default/objects/EBS_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>EBS Orders</relationshipLabel>
    <relationshipName>EBS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>