force-app/main/default/objects/EBS_Order__c/fields/Opportunity_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EBS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>