force-app/main/default/objects/EBS_Order__c/fields/Order_Confirm_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirm_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Confirm Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBS Orders (Order Confirm Contact)</relationshipLabel>
    <relationshipName>EBS_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>