force-app/main/default/objects/EBS_Order__c/fields/Order_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Email__c</fullName>
    <label>Order Confirmation Email</label>
    <type>Email</type>
</CustomField>