force-app/main/default/objects/EBS_Order__c/fields/Order_Confirmation_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Confirmation Opt In</label>
    <type>Checkbox</type>
</CustomField>