force-app/main/default/objects/EBS_Order__c/fields/Order_Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Detail_URL__c</fullName>
    <formula>IF(
RecordType.DeveloperName = &apos;KGEBSOrder&apos;,
&apos;https://omtest.kooziegroup.com/getContent?orderNumber=&apos; &amp; EBS_Order_Number__c &amp; &apos;&amp;source=SF&apos;,
&apos;https://omtest.kooziegroup.com/p/acquisition-orders?companyIdentifier=&apos; &amp; Company_identifier__c &amp; &apos;&amp;orderNumber=&apos; &amp; EBS_Order_Number__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Detail URL</label>
    <type>Text</type>
</CustomField>