force-app/main/default/objects/EBS_Order__c/fields/Order_From_Spec_Sample__c.field-meta.xml
<CustomField>
    <fullName>Order_From_Spec_Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Specifies if the order originated from a Spec Sample.</description>
    <label>Order From Spec Sample</label>
    <referenceTo>EBS_Order__c</referenceTo>
    <relationshipLabel>Order From Spec Sample</relationshipLabel>
    <relationshipName>Order_From_Spec_Sample</relationshipName>
    <type>Lookup</type>
</CustomField>