force-app/main/default/objects/EBS_Order__c/fields/Order_header_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_header_Closed_Date__c</fullName>
    <description
  >Date to capture when the header status = closed. Data sent from EBS and used for Journeys</description>
    <inlineHelpText
  >Date to capture when the header status = closed. Data sent from EBS and used for Journeys</inlineHelpText>
    <label>Order header Closed Date</label>
    <type>Date</type>
</CustomField>