force-app/main/default/objects/EBS_Order__c/fields/Order_Header_Tax__c.field-meta.xml
<CustomField>
    <fullName>Order_Header_Tax__c</fullName>
    <label>Order Header Tax</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>