force-app/main/default/objects/EBS_Order__c/fields/Order_Header_USD_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Header_USD_Total__c</fullName>
    <label>Order Header USD Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>