force-app/main/default/objects/EBS_Order__c/fields/Order_Hold_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Hold_Status__c</fullName>
    <label>Order Hold Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>