force-app/main/default/objects/EBS_Order__c/fields/Order_Info_URL__c.field-meta.xml
<CustomField>
    <fullName>Order_Info_URL__c</fullName>
    <label>Order Info URL</label>
    <type>Url</type>
</CustomField>