force-app/main/default/objects/EBS_Order__c/fields/Order_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Count__c</fullName>
    <label>Order Line Count</label>
    <summaryForeignKey>EBS_Order_Line__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>