force-app/main/default/objects/EBS_Order__c/fields/Order_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_Source_ID__c</fullName>
    <label>Order Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>