force-app/main/default/objects/EBS_Order__c/fields/Order_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Order_Subtotal__c</fullName>
    <label>Order Subtotal</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>