force-app/main/default/objects/EBS_Order__c/fields/Parent_Acc_number1__c.field-meta.xml
<CustomField>
    <fullName>Parent_Acc_number1__c</fullName>
    <label>Parent Acc number1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>