force-app/main/default/objects/EBS_Order__c/fields/Parent_Acc_number__c.field-meta.xml
<CustomField>
    <fullName>Parent_Acc_number__c</fullName>
    <formula>Account_Name__r.Parent_EBS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Acc number</label>
    <type>Text</type>
</CustomField>