force-app/main/default/objects/EBS_Order__c/fields/Parent_Acc_number_Mktg__c.field-meta.xml
<CustomField>
    <fullName>Parent_Acc_number_Mktg__c</fullName>
    <formula>Account_Name__r.HierarchyParent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Acc number Mktg</label>
    <type>Text</type>
</CustomField>