force-app/main/default/objects/EBS_Order__c/fields/PO_Calc_Override__c.field-meta.xml
<CustomField>
    <fullName>PO_Calc_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Calc Override</label>
    <type>Checkbox</type>
</CustomField>