force-app/main/default/objects/EBS_Order__c/fields/PO_Confirmation_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>PO_Confirmation_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Confirmation Opt In</label>
    <type>Checkbox</type>
</CustomField>