force-app/main/default/objects/EBS_Order__c/fields/PO_Confirmation_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Confirmation_Required__c</fullName>
    <label>PO Confirmation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>