force-app/main/default/objects/EBS_Order__c/fields/PO_Contact__c.field-meta.xml
<CustomField>
    <fullName>PO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PO Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>EBS Orders</relationshipLabel>
    <relationshipName>EBS_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>