force-app/main/default/objects/EBS_Order__c/fields/PO_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>PO_Contact_Email__c</fullName>
    <label>PO Contact Email</label>
    <type>Email</type>
</CustomField>