force-app/main/default/objects/EBS_Order__c/fields/PO_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Contact_Last_Name__c</fullName>
    <label>PO Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>