force-app/main/default/objects/EBS_Order__c/fields/PO_contact_marketing_sync__c.field-meta.xml
<CustomField>
    <fullName>PO_contact_marketing_sync__c</fullName>
    <formula>PO_Contact__r.Marketing_Cloud_Contact_Sync__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO contact marketing sync</label>
    <type>Checkbox</type>
</CustomField>