force-app/main/default/objects/EBS_Order__c/fields/PO_Diff_Calc_Time__c.field-meta.xml
<CustomField>
    <fullName>PO_Diff_Calc_Time__c</fullName>
    <label>PO Diff Calc Time</label>
    <type>DateTime</type>
</CustomField>